[package]
name = "win_detach_command"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.61.1", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Environment",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
] }
